# stoke

./: .gitignore  404.html  README.md  index.html  installer.iss  pyproject.toml  sitemap.xml  stoke.spec
.github/workflows/: docs.yml
advanced/ide-integration/: index.html
advanced/vcpkg/: index.html
commands/clean/: index.html
commands/hot-reload/: index.html
commands/ide-sync/: index.html
commands/init/: index.html
commands/overview/: index.html
commands/run/: index.html
commands/watch/: index.html
configuration/lock-file/: index.html
configuration/profiles/: index.html
configuration/stoke-toml/: index.html
docs/: README_en.md  README_ko.md
docs/framworks/ko/: fastapi.md
faq/: index.html
frameworks/en/chi/: index.html
frameworks/en/django/: index.html
frameworks/en/echo/: index.html
frameworks/en/express/: index.html
frameworks/en/fastapi/: index.html
frameworks/en/fastify/: index.html
frameworks/en/fiber/: index.html
frameworks/en/flask/: index.html
frameworks/en/gin/: index.html
frameworks/en/hono/: index.html
frameworks/en/nestjs/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
search/: search_index.json
src/stoke/: __main__.py  c_libraries.py  c_versions.py  cache.py  cli.py  config.py  hot_reload.py  init.py  install_versions.py  java_versions.py  lock.py  prompts.py  python_versions.py  toml_editor.py  vcpkg.py  watcher.py
troubleshooting/: index.html
versions/: nodejs.json
website/: mkdocs.yml
website/docs/: faq.md  index.md  troubleshooting.md
(+163 files in other folders)
